# agent-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  configuration.md  index.md  instructions.md  next-feature-tasks.md  notebooks.md  operations.md  planning.md  plugins.md  remote-spooling-ssh-codex.md  task-ingest-command-contract.md  task-plans.md  worker-launch-contract.md
docs/research/: 2026-06-08-coordination-intake-dispatch.md  2026-06-09-cli-tui-helper-evaluation.md  2026-06-10-cli-command-contracts.md  2026-06-10-cli-parser-migration.md  2026-06-10-local-ssh-server-harness.md  2026-06-10-overview-ux-contract.md  index.md
src/agent_tracker/: __init__.py  cli.py  config.py  db.py  exporters.py  importers.py  mcp_tools.py  models.py  plugins.py  rendering.py  service.py  skill_bootstrap.py
tests/: test_agent_tracker.py  test_hpc_event_aliases.py  test_prompt_path_rendering.py
tracking/: README.md  project.json  tasks.json
tracking/notebooks/: project.md
tracking/notebooks/repos/: agent-tracker.md
