[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tracker"
version = "0.1.0"
description = "Generic local coordination queue for agent-managed projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = []

[project.scripts]
agent-tracker = "agent_tracker.cli:main"
agent-tracker-install-skill = "agent_tracker.skill_bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_tracker = ["vendor/skills/*/SKILL.md", "vendor/skills/*/agents/openai.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
